examples/kyverno-setup/deployment_good_bad_pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: badpod-deployment
  labels:
    app.kubernetes.io/part-of: kyverno-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: kyverno-test
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: kyverno-test
    spec:
      containers:
      - name: nginx
        image: nginx:stable
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goodpod-deployment
  labels:
    app.kubernetes.io/part-of: kyverno-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: kyverno-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/part-of: kyverno-test
    spec:
      containers:
      - name: nginx
        image: nginx:stable
